--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+Update to the latest SDK
+Add Google Analytics
+Send exceptions to Google Analytics
 Remove activity_*_margin
 Sort categories and goods on load
 AsyncTasks for parsing
