--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,66 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <!-- Application name -->
     <string name="app_name">OK Goods</string>
 
-    <string name="title_activity_main">OK</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_select_shop">Select shop</string>
-    <string name="title_activity_history">History</string>
-    <string name="title_activity_history_details">History details</string>
-    <string name="title_activity_goods_catalog">Goods catalog</string>
-
-    <string name="pref_header_general">General</string>
-    <string name="pref_header_notifications">Notifications</string>
-    <string name="pref_title_general_city">City</string>
-    <string name="pref_description_general_city">Select your city</string>
-    <string name="pref_title_notifications_show_notification">Show notification</string>
-    <string name="pref_description_notifications_show_notification">Enables notification</string>
-
-    <string name="rub_currency">%1$.2f rub.</string>
-    <string name="rub_currency_count">%1$.2f rub. x %2$.1f</string>
-    <string name="add_good_to_list">Add good to list</string>
-    <string name="category">Category</string>
-    <string name="own_category">Own category</string>
-    <string name="own_good">Own good</string>
-    <string name="good_details">Good details</string>
-    <string name="total">Total:</string>
-
-    <string name="add_good">Add good</string>
-    <string name="delete_goods">Delete goods</string>
-    <string name="start">Start</string>
-    <string name="history">History</string>
-    <string name="update_db">Update database</string>
-    <string name="settings">Settings</string>
-    <string name="exit">Exit</string>
-    <string name="show_map">Show map</string>
-    <string name="hide_map">Hide map</string>
-    <string name="shop">Shop:</string>
-    <string name="select_shop">Select shop</string>
-
-    <string name="show_list">Show list</string>
-    <string name="hide_list">Hide list</string>
-    <string name="filter">Filter</string>
-    <string name="details_for_shop">Shop details</string>
-    <string name="nearest_shop">The nearest shop</string>
-    <string name="undefined_shop">Undefined shop</string>
-    <string name="phone">Phone:</string>
-    <string name="work_hours">Work hours:</string>
-    <string name="square">Square:</string>
-    <string name="opening_date">Opening date:</string>
-    <string name="parking_places">Parking places:</string>
-    <string name="number_of_cashboxes">Number of cashboxes:</string>
-    <string name="services">Services:</string>
-    <string name="photos">Photos:</string>
-    <string name="all_day">All day</string>
-    <string name="square_value">%1$d m&#178;</string>
-    <string name="hypermarket">Hypermarket</string>
-    <string name="supermarket">Supermarket</string>
-
-    <string name="goods_catalog">Goods catalog</string>
-    <string name="show_catalog">Show catalog</string>
-    <string name="hide_catalog">Hide catalog</string>
-    <string name="expand">Expand</string>
-
-    <string name="time">Time: %1$s</string>
-    <string name="no_information">No information</string>
 </resources>
