--- a/TODO.txt
+++ b/TODO.txt
@@ -4,6 +4,7 @@ Add comments to colors.xml
 Gravity for each TextView
 Update to the latest SDK
 Add Google Analytics
+Apply Glow effect on list items
 Send exceptions to Google Analytics
 Remove activity_*_margin
 Sort categories and goods on load
@@ -13,7 +14,6 @@ Improve settings
 Wait for animation finish before set attributes in History/SelectedGoods lists
 Take from cache while offline
 Add error image for shop photo meta data loader
-Probably add goods_in_categories table
 Add goods
 Remove goods
 Add aproximate cost
